--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<nav>
+		<%= link_to "Home", home_path %> /
+		<%= link_to "All Songs", songs_path %> /
+		<%= link_to "New Song", new_song_path %>
+	</nav>
 
 <%= yield %>
 
